--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/images/ban.png");
+    background-image: url("./images/ban.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
